syntax = "proto3";

package pathfinder.messages;

message PingResponse {
  bool IsSuccessful = 1;
}

message GetBotsResponse {
  repeated Bot Bots = 1;
}

message SelectBotRequest {
  string BotId = 1;
}

message SelectBotResponse {
  Bot Bot = 1;
}

message ResetBotRequest {
  string BotId = 1;
}

message ResetBotResponse {
  Bot Bot = 1;
}

message SendMessageRequest {
  string BotId = 1;
  string Message = 2;
}

message SendMessageResponse {
  string BotId = 1;
  string Message = 2;
  bool IsLost = 3;
}

message Bot {
  string Id = 1;
  string Name = 2;
  string Status = 3;
}